[OfflinePages] Fix Coordinator issue with lagging NetworkChangeNotifier Use current device conditions in TryNextRequest to decide if have network connection currently since NetworkChangeNofifier might not be updated before GcmNetworkManager is and kicks StartProcessing.

BUG=665551

Review-Url: https://codereview.chromium.org/2508213002
Cr-Commit-Position: refs/heads/master@{#432936}

Former-commit-id: ff642e8ff58fefd407c1af7e2f74284c00d65d5f